--- a/Reto4.ipynb
+++ b/Reto4.ipynb
@@ -52,14 +52,13 @@
             "Robot avanza\n",
             "Robot avanza\n",
             "Robot avanza\n",
-            "Robot avanza\n",
             "Robot avanza\n"
           ]
         }
       ],
       "source": [
         "indice = 0\n",
-        "while indice<= 10:\n",
+        "while indice<= 9:\n",
         "    print(\"Robot avanza\") \n",
         "    indice = indice+1"
       ]
@@ -228,7 +227,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "id": "AjgLW5tEJqrQ"
       },
@@ -248,10 +247,38 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "id": "B1mot8S5j8qJ"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "12316.880000000001\n"
+          ]
+        }
+      ],
+      "source": [
+        "total=[]\n",
+        "for lista in lista:\n",
+        "    if lista > 1500:\n",
+        "        total.append(lista*.80)\n",
+        "    elif lista> 1000:\n",
+        "        total.append(lista*.82)\n",
+        "    elif lista> 500:\n",
+        "        total.append(lista*.85)\n",
+        "    elif lista> 100:\n",
+        "        total.append(lista*.90)\n",
+        "a_pagar= sum(total)\n",
+        "print(a_pagar)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
       "outputs": [],
       "source": []
     }
@@ -277,7 +304,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.10"
+      "version": "3.8.10 (tags/v3.8.10:3d8993a, May  3 2021, 11:48:03) [MSC v.1928 64 bit (AMD64)]"
     },
     "vscode": {
       "interpreter": {
